<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/app_name_label"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_marginStart="29dp"
            android:layout_marginEnd="29dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"/>

        <TextView
            android:id="@+id/tvFindMovie"
            android:text="@string/find_your_movies_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            android:layout_marginStart="29dp"
            android:layout_marginEnd="29dp"
            android:layout_marginTop="22dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imvSearch"
            app:layout_constraintTop_toBottomOf="@id/tvFindMovie"
            android:layout_marginStart="29dp"
            android:layout_marginEnd="23dp"
            android:layout_marginTop="18dp"
            android:background="@color/dark2"
            app:cardCornerRadius="16dp">

            <EditText
                android:id="@+id/edtSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_here_label"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp"
                android:background="@color/dark2"
                android:paddingStart="19dp"
                android:paddingTop="10dp"
                android:paddingBottom="11dp"
                android:paddingEnd="14dp" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imvSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="29dp"
            android:src="@drawable/ic_search_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFindMovie" />

        <TextView
            android:id="@+id/tvCategories"
            android:layout_marginEnd="29dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="22dp"
            app:layout_constraintTop_toBottomOf="@id/cvSearch"
            android:text="@string/categories_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGenre"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCategories" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcMoviePopular"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvGenre"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="29dp"
            android:layout_marginEnd="29dp"
            android:layout_marginTop="29dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
