<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/dark"
        android:padding="2dp">

        <androidx.cardview.widget.CardView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/cvPoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp">

            <ImageView
                android:scaleType="fitXY"
                android:id="@+id/imvPoster"
                android:layout_width="95dp"
                android:layout_height="120dp"
                android:src="@drawable/img_loading" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:maxLines="2"
            android:ellipsize="end"
            android:lines="2"
            android:id="@+id/tvTitle"
            android:layout_marginStart="22dp"
            app:layout_constraintStart_toEndOf="@id/cvPoster"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/movie_title_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@id/imgAddWatchList"
            android:layout_marginEnd="12dp" />

        <TextView
            android:maxLines="2"
            android:ellipsize="end"
            android:lines="2"
            android:id="@+id/tvReleaseDate"
            android:layout_marginStart="22dp"
            app:layout_constraintStart_toEndOf="@id/cvPoster"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            android:text="@string/release_date_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@id/imgAddWatchList"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp" />

        <TextView
            android:maxLines="2"
            android:ellipsize="end"
            android:lines="2"
            android:id="@+id/tvAverageRating"
            android:layout_marginStart="22dp"
            app:layout_constraintStart_toEndOf="@id/cvPoster"
            app:layout_constraintTop_toBottomOf="@id/tvReleaseDate"
            android:text="@string/average_rating_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@id/imgAddWatchList"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp" />

        <ImageView
            android:id="@+id/imgAddWatchList"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_watch_list_not_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imgStarRate"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/imgAddWatchList"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_start_not_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvMyRate"
            android:textStyle="bold"
            android:padding="4dp"
            android:textSize="12sp"
            android:textColor="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgStarRate"
            app:layout_constraintStart_toStartOf="@id/imgStarRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
